--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOOD LOVER</title>
     <!-- icon for website -->
-    <link rel="shortcut icon" href="img/logo.png">
+    <link rel="shortcut icon" href="https://github.com/itsexito/food_lover_template/tree/main/img/logo.png">
     <!-- style css file for website -->
     <link rel="stylesheet" href="css/main.css">
     <!-- font awesome -->
